# Axiom-Sandbox

./: .env.example  .gitignore  LICENSE  README.md  dump_project.py  index.html  package-lock.json  package.json  sandbox_tech_specs.md  screen1.html
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs
src-tauri/src/data/: backfill.rs  csv_logger.rs  mock_tradfi_feed.rs  mod.rs  trade_manager.rs  trade_record.rs
src-tauri/src/exchange/: config.rs  engine.rs  ibkr_engine.rs  mod.rs  orders.rs  trade_manager.rs
src-tauri/src/risk/: config.rs  manager.rs  mod.rs  sizing.rs
src-tauri/src/strategy/: evaluator.rs  mod.rs  models.rs
src-tauri/src/types/: market.rs  mod.rs  position.rs  primitives.rs  trade.rs
src-tauri/src/websocket/: config.rs  connection.rs  manager.rs  messages.rs  mod.rs  streams.rs
