[package]
name = "axiom-sandbox"
version = "0.1.0"
description = "Axiom Sandbox — Open-Source Desktop Trading Sandbox"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
# ── Tauri ──────────────────────────────────────────────────────────────────────
tauri            = { version = "2.9.2", features = [] }
tauri-plugin-log = "2"

# ── Async runtime ──────────────────────────────────────────────────────────────
tokio        = { version = "1.49", features = ["full"] }
futures      = "0.3.31"
futures-util = "0.3.31"

# ── Exchange Integration ───────────────────────────────────────────────────────
binance = { version = "0.21.2" }

# ── Financial math precision ───────────────────────────────────────────────────
rust_decimal        = "1.34"
rust_decimal_macros = "1.34"

# ── Data Serialization ─────────────────────────────────────────────────────────
serde      = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
csv        = "1.3"
chrono     = { version = "0.4.43", features = ["serde"] }

# ── WebSocket / Networking ─────────────────────────────────────────────────────
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-native-roots"] }
rustls            = { version = "0.23", features = ["ring"] }
url               = "2.5.8"
reqwest           = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# ── Crypto — Binance HMAC-SHA256 request signing ──────────────────────────────
hmac = "0.12"
sha2 = "0.10"

# ── Utilities ──────────────────────────────────────────────────────────────────
anyhow     = "1.0.101"
log        = "0.4"
env_logger = "0.11.8"
thiserror  = "2.0.18"
rand       = "0.10.0"
dotenvy    = "0.15.7"

# ── Technical Analysis (Phase 2 Rule Evaluator) ────────────────────────────────
yata = "0.6"

[dev-dependencies]
tempfile = "3.24.0"
